maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:35: error: not enough arguments for method numerote: (x: Int, y: Int, num: Int, xMax: Int, yMax: Int)Unit.
Unspecified value parameters xMax, yMax.
    numerote (x,y-1,num+1);
             ^ShortestPathMaze:40: error: not enough arguments for method numerote: (x: Int, y: Int, num: Int, xMax: Int, yMax: Int)Unit.
Unspecified value parameters xMax, yMax.
    numerote (x-1,y,num+1);
             ^ShortestPathMaze:45: error: not enough arguments for method numerote: (x: Int, y: Int, num: Int, xMax: Int, yMax: Int)Unit.
Unspecified value parameters xMax, yMax.
    numerote (x+1,y,num+1);
             ^ShortestPathMaze:50: error: not enough arguments for method numerote: (x: Int, y: Int, num: Int, xMax: Int, yMax: Int)Unit.
Unspecified value parameters xMax, yMax.
    numerote (x,y+1,num+1);
             ^